--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.2"
+  },
+  "devDependencies": {
+    "axios": "^1.3.4",
+    "zod": "^3.21.4"
   }
 }
